cncProd/force-app/main/default/objects/Vehicle_Master__c/fields/Comm_No__c.field-meta.xml
<CustomField>
    <fullName>Comm_No__c</fullName>
    <label>Comm No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>