cncProd/force-app/main/default/objects/Vehicle_Master__c/fields/Internal_Comm_No__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comm_No__c</fullName>
    <label>Internal Comm No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>