cncProd/force-app/main/default/objects/Vehicle_Master__c/fields/Model_Group__c.field-meta.xml
<CustomField>
    <fullName>Model_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Model Group</label>
    <referenceTo>Model_Group__c</referenceTo>
    <relationshipLabel>Vehicle Masters</relationshipLabel>
    <relationshipName>Vehicle_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>