cncProd/force-app/main/default/objects/Vehicle_Master__c/fields/Registration_No__c.field-meta.xml
<CustomField>
    <fullName>Registration_No__c</fullName>
    <label>Registration No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>