cncProd/force-app/main/default/objects/Vehicle_Master__c/fields/Showroom__c.field-meta.xml
<CustomField>
    <fullName>Showroom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Showroom</label>
    <referenceTo>Showroom__c</referenceTo>
    <relationshipLabel>Vehicle Masters</relationshipLabel>
    <relationshipName>Vehicle_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>