cncProd/force-app/main/default/objects/Vehicle_Master__c/fields/Variant__c.field-meta.xml
<CustomField>
    <fullName>Variant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variant</label>
    <referenceTo>Variant__c</referenceTo>
    <relationshipLabel>Vehicle Masters</relationshipLabel>
    <relationshipName>Vehicle_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>