cncProd/force-app/main/default/objects/Vehicle_Master__c/listViews/All_Showroom_Vehicle.listView-meta.xml
<ListView>
    <fullName>All_Showroom_Vehicle</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Comm_No__c</columns>
    <columns>Registration_No__c</columns>
    <columns>Internal_Comm_No__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Showroom</value>
    </filters>
    <label>All Showroom Vehicle</label>
</ListView>