cncProd/force-app/main/default/objects/Vehicle_Master__c/listViews/CIT_Showroom.listView-meta.xml
<ListView>
    <fullName>CIT_Showroom</fullName>
    <columns>NAME</columns>
    <columns>Franchise_Code__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Comm_No__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Franchise_Code__c</field>
        <operation>equals</operation>
        <value>CITPC</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Showroom</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Sold</value>
    </filters>
    <label>CIT Showroom</label>
</ListView>